chartmuseum/templates/chartmuseum-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: chartmuseum
  name: chartmuseum
spec:
  host: charts.baloise.dev
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: chartmuseum-chartmuseum
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
